include_HEADERS = \
	libcthreads.h

pkginclude_HEADERS = \
	libcthreads/definitions.h \
	libcthreads/error.h \
	libcthreads/extern.h \
	libcthreads/features.h \
	libcthreads/types.h

EXTRA_DIST = \
	libcthreads.h.in \
	libcthreads/definitions.h.in \
	libcthreads/features.h.in \
	libcthreads/types.h.in

DISTCLEANFILES = \
	libcthreads.h \
	libcthreads/definitions.h \
	libcthreads/features.h \
	libcthreads/types.h \
	Makefile \
	Makefile.in

