MSVSCPP_FILES = \
	cthreads_test_condition/cthreads_test_condition.vcproj \
	cthreads_test_error/cthreads_test_error.vcproj \
	cthreads_test_get_version/cthreads_test_get_version.vcproj \
	cthreads_test_lock/cthreads_test_lock.vcproj \
	cthreads_test_mutex/cthreads_test_mutex.vcproj \
	cthreads_test_queue/cthreads_test_queue.vcproj \
	cthreads_test_read_write_lock/cthreads_test_read_write_lock.vcproj \
	cthreads_test_thread/cthreads_test_thread.vcproj \
	cthreads_test_thread_pool/cthreads_test_thread_pool.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libcthreads.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

